--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -35,8 +35,12 @@
           <div class="link-group">
             <h4>Connect</h4>
             <ul>
-              <li><a href="mailto:rama7993&#64;gmail.com">Email</a></li>
-              <li><a href="tel:+919876543210">Phone</a></li>
+              <li>
+                <a href="mailto:yerramramakotireddy.work&#64;gmail.com"
+                  >Email</a
+                >
+              </li>
+              <li><a href="tel:+917993720356">Phone</a></li>
               <li>
                 <a href="https://github.com/rama7993" target="_blank">GitHub</a>
               </li>
@@ -47,21 +51,6 @@
               </li>
             </ul>
           </div>
-        </div>
-      </div>
-
-      <div class="footer-social">
-        <div class="social-links">
-          <a
-            *ngFor="let link of socialLinks"
-            [href]="link.url"
-            target="_blank"
-            [title]="link.name"
-            class="social-link"
-            [ngStyle]="{ '--hover-color': link.hoverColor }"
-          >
-            <i [class]="link.iconClass"></i>
-          </a>
         </div>
       </div>
 
