--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -6,7 +6,7 @@
 
   <div class="container">
     <div class="contact-content">
-      <div class="contact-info" data-aos="fade-right">
+      <div class="contact-info">
         <div class="info-card">
           <h3>Let's Connect!</h3>
           <p>
@@ -73,7 +73,7 @@
         </div>
       </div>
 
-      <div class="contact-form-container" data-aos="fade-left">
+      <div class="contact-form-container">
         <form
           class="contact-form"
           [formGroup]="contactForm"
