--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -30,7 +30,11 @@
         line-height: 1.3;
 
         .highlight {
-          background: linear-gradient(45deg, var(--primary-color), var(--gradient-primary-end));
+          background: linear-gradient(
+            45deg,
+            var(--primary-color),
+            var(--gradient-primary-end)
+          );
           -webkit-background-clip: text;
           -webkit-text-fill-color: transparent;
           background-clip: text;
@@ -130,7 +134,11 @@
         .stat-icon {
           width: 50px;
           height: 50px;
-          background: linear-gradient(45deg, var(--primary-color), var(--gradient-primary-end));
+          background: linear-gradient(
+            45deg,
+            var(--primary-color),
+            var(--gradient-primary-end)
+          );
           border-radius: 50%;
           display: flex;
           align-items: center;
