--- a/src/app/components/loading/loading.component.scss
+++ b/src/app/components/loading/loading.component.scss
@@ -4,7 +4,11 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+  background: linear-gradient(
+    135deg,
+    var(--background-color) 0%,
+    var(--hover-color) 100%
+  );
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -29,7 +33,7 @@
     width: 100%;
     height: 100%;
     border: 3px solid transparent;
-    border-top: 3px solid rgba(255, 255, 255, 0.8);
+    border-top: 3px solid rgba(var(--primary-rgb), 0.8);
     border-radius: 50%;
     animation: spin 1.5s linear infinite;
 
@@ -43,7 +47,7 @@
       height: 90%;
       top: 5%;
       left: 5%;
-      border-top-color: rgba(255, 255, 255, 0.6);
+      border-top-color: rgba(var(--primary-rgb), 0.6);
     }
 
     &:nth-child(3) {
@@ -52,7 +56,7 @@
       height: 80%;
       top: 10%;
       left: 10%;
-      border-top-color: rgba(255, 255, 255, 0.4);
+      border-top-color: rgba(var(--primary-rgb), 0.4);
     }
 
     &:nth-child(4) {
@@ -61,13 +65,13 @@
       height: 70%;
       top: 15%;
       left: 15%;
-      border-top-color: rgba(255, 255, 255, 0.2);
+      border-top-color: rgba(var(--primary-rgb), 0.2);
     }
   }
 }
 
 .loading-text {
-  color: white;
+  color: var(--text-color);
   font-size: 1.5rem;
   font-weight: 600;
 
