--- a/src/app/components/intro/intro.component.scss
+++ b/src/app/components/intro/intro.component.scss
@@ -142,6 +142,7 @@
     border: 2px solid transparent;
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 0.5rem;
     cursor: pointer;
 
